test/should_pass/reuse_002.grg
actions reuse_002 using attrib_model_001;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	modify {
		- f:EINT<e> ->;
	}
}


