test/should_fail/reuse_004.grg
actions reuse_004 using attrib_model_001;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		x- f:NINT<e> ->y;
	}
}
